# llvm-project

mlir/examples/toy/: CMakeLists.txt
mlir/examples/toy/Ch6A/: CMakeLists.txt
mlir/examples/toy/Ch6A/include/toy/: CMakeLists.txt  Ops.td
mlir/examples/toy/Ch6A/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp
mlir/test/: CMakeLists.txt
mlir/test/Examples/Toy/Ch6a/: matmul.toy
